Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -357,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries =  # add code here"
+    "countries = countri # add code here"
    ]
   },
   {
