--- a/index.ipynb
+++ b/index.ipynb
@@ -357,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = countries.pop() # add code here"
+    "countries = countries.pop('New Mexico') # add code here"
    ]
   },
   {
