Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,7 @@
     }
    ],
    "source": [
-    "countries = pop('New Mexico') # add code here"
+    "countriespop('New Mexico') # add code here"
    ]
   },
   {
