Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,7 @@
     }
    ],
    "source": [
-    "countries.pop(count5) # add code here"
+    "countries =pop(countries[5]) # add code here"
    ]
   },
   {
