Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,7 @@
     }
    ],
    "source": [
-    "countries = countries.pop() # add code here"
+    "countries = countries.pop('New M') # add code here"
    ]
   },
   {
