Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -353,22 +353,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Mexico'"
+       "'New Mexico'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries.pop(3) # add code here"
+    "countries.pop(4) # add code here"
    ]
   },
   {
